<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_focused"
        android:title="@string/lbl_Events" />

    <item
        android:id="@+id/nav_waitlist"
        android:icon="@drawable/hourglass_empty"
        android:title="Waitlist" />

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/menu"
        android:title="@string/lbl_Facility" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/default_profile"
        android:title="@string/lbl_Profile" />


</menu>