...
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_text"
        android:layout_marginTop="10dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:background="@drawable/button_background"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
...
